# discord-nitro-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.yaml  main.rs
