[package]
name = "discord-nitro-gen"
version = "0.1.0"
authors = ["Sebbl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
rand = "0.8.3"
num-format = "0.4.0"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
#async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3.10"
serde = "*"
serde_json = "*"
